--- a/Results_visualizer.ipynb
+++ b/Results_visualizer.ipynb
@@ -306,6 +306,249 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Correlation calc for moved with altruism for our custom set of questions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.033220308194113174\n"
+     ]
+    }
+   ],
+   "source": [
+    "count=1\n",
+    "arousal_list = []\n",
+    "altruistic_list=[]\n",
+    "for row in metadata.iterrows():\n",
+    "    arousal_list.append(row[1][8])\n",
+    "    score=0\n",
+    "    for i in range(18,33):\n",
+    "        txt = row[1][i]\n",
+    "        if txt == 'Definitely Not':\n",
+    "            score+=-4\n",
+    "        elif txt == 'Probably Not':\n",
+    "            score+=-2\n",
+    "        elif txt == 'Possibly':\n",
+    "            score+=0\n",
+    "        elif txt == 'Probably':\n",
+    "            score+=2\n",
+    "        elif txt == 'Definitely':\n",
+    "            score+=4\n",
+    "    altruistic_list.append(score)\n",
+    "    \n",
+    "for row in metadata2.iterrows():\n",
+    "    arousal_list.append(row[1][8])\n",
+    "    score=0\n",
+    "    for i in range(18,33):\n",
+    "        txt = row[1][i]\n",
+    "        if txt == 'Definitely Not':\n",
+    "            score+=-4\n",
+    "        elif txt == 'Probably Not':\n",
+    "            score+=-2\n",
+    "        elif txt == 'Possibly':\n",
+    "            score+=0\n",
+    "        elif txt == 'Probably':\n",
+    "            score+=2\n",
+    "        elif txt == 'Definitely':\n",
+    "            score+=4\n",
+    "    altruistic_list.append(score)\n",
+    "    \n",
+    "for row in metadata1.iterrows():\n",
+    "    arousal_list.append(row[1][8])\n",
+    "    score=0\n",
+    "    for i in range(18,33):\n",
+    "        txt = row[1][i]\n",
+    "        if txt == 'Definitely Not':\n",
+    "            score+=-4\n",
+    "        elif txt == 'Probably Not':\n",
+    "            score+=-2\n",
+    "        elif txt == 'Possibly':\n",
+    "            score+=0\n",
+    "        elif txt == 'Probably':\n",
+    "            score+=2\n",
+    "        elif txt == 'Definitely':\n",
+    "            score+=4\n",
+    "    altruistic_list.append(score)\n",
+    "    \n",
+    "arousal_list = np.asarray(arousal_list)\n",
+    "altruistic_list = np.asarray(altruistic_list)\n",
+    "r = np.corrcoef(arousal_list, altruistic_list)\n",
+    "print(r[0,1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Correlation calc for moved with uplifted for our custom set of questions\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-0.04543613772511208\n"
+     ]
+    }
+   ],
+   "source": [
+    "count=1\n",
+    "arousal_list = []\n",
+    "altruistic_list=[]\n",
+    "for row in metadata.iterrows():\n",
+    "    arousal_list.append(row[1][9])\n",
+    "    score=0\n",
+    "    for i in range(18,33):\n",
+    "        txt = row[1][i]\n",
+    "        if txt == 'Definitely Not':\n",
+    "            score+=-4\n",
+    "        elif txt == 'Probably Not':\n",
+    "            score+=-2\n",
+    "        elif txt == 'Possibly':\n",
+    "            score+=0\n",
+    "        elif txt == 'Probably':\n",
+    "            score+=2\n",
+    "        elif txt == 'Definitely':\n",
+    "            score+=4\n",
+    "    altruistic_list.append(score)\n",
+    "    \n",
+    "for row in metadata2.iterrows():\n",
+    "    arousal_list.append(row[1][9])\n",
+    "    score=0\n",
+    "    for i in range(18,33):\n",
+    "        txt = row[1][i]\n",
+    "        if txt == 'Definitely Not':\n",
+    "            score+=-4\n",
+    "        elif txt == 'Probably Not':\n",
+    "            score+=-2\n",
+    "        elif txt == 'Possibly':\n",
+    "            score+=0\n",
+    "        elif txt == 'Probably':\n",
+    "            score+=2\n",
+    "        elif txt == 'Definitely':\n",
+    "            score+=4\n",
+    "    altruistic_list.append(score)\n",
+    "    \n",
+    "for row in metadata1.iterrows():\n",
+    "    arousal_list.append(row[1][9])\n",
+    "    score=0\n",
+    "    for i in range(18,33):\n",
+    "        txt = row[1][i]\n",
+    "        if txt == 'Definitely Not':\n",
+    "            score+=-4\n",
+    "        elif txt == 'Probably Not':\n",
+    "            score+=-2\n",
+    "        elif txt == 'Possibly':\n",
+    "            score+=0\n",
+    "        elif txt == 'Probably':\n",
+    "            score+=2\n",
+    "        elif txt == 'Definitely':\n",
+    "            score+=4\n",
+    "    altruistic_list.append(score)\n",
+    "    \n",
+    "arousal_list = np.asarray(arousal_list)\n",
+    "altruistic_list = np.asarray(altruistic_list)\n",
+    "r = np.corrcoef(arousal_list, altruistic_list)\n",
+    "print(r[0,1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Correlation calc for optimistic about humanity with uplifted for our custom set of questions\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-0.002388106840601326\n"
+     ]
+    }
+   ],
+   "source": [
+    "count=1\n",
+    "arousal_list = []\n",
+    "altruistic_list=[]\n",
+    "for row in metadata.iterrows():\n",
+    "    arousal_list.append(row[1][10])\n",
+    "    score=0\n",
+    "    for i in range(18,33):\n",
+    "        txt = row[1][i]\n",
+    "        if txt == 'Definitely Not':\n",
+    "            score+=-4\n",
+    "        elif txt == 'Probably Not':\n",
+    "            score+=-2\n",
+    "        elif txt == 'Possibly':\n",
+    "            score+=0\n",
+    "        elif txt == 'Probably':\n",
+    "            score+=2\n",
+    "        elif txt == 'Definitely':\n",
+    "            score+=4\n",
+    "    altruistic_list.append(score)\n",
+    "    \n",
+    "for row in metadata2.iterrows():\n",
+    "    arousal_list.append(row[1][10])\n",
+    "    score=0\n",
+    "    for i in range(18,33):\n",
+    "        txt = row[1][i]\n",
+    "        if txt == 'Definitely Not':\n",
+    "            score+=-4\n",
+    "        elif txt == 'Probably Not':\n",
+    "            score+=-2\n",
+    "        elif txt == 'Possibly':\n",
+    "            score+=0\n",
+    "        elif txt == 'Probably':\n",
+    "            score+=2\n",
+    "        elif txt == 'Definitely':\n",
+    "            score+=4\n",
+    "    altruistic_list.append(score)\n",
+    "    \n",
+    "for row in metadata1.iterrows():\n",
+    "    arousal_list.append(row[1][10])\n",
+    "    score=0\n",
+    "    for i in range(18,33):\n",
+    "        txt = row[1][i]\n",
+    "        if txt == 'Definitely Not':\n",
+    "            score+=-4\n",
+    "        elif txt == 'Probably Not':\n",
+    "            score+=-2\n",
+    "        elif txt == 'Possibly':\n",
+    "            score+=0\n",
+    "        elif txt == 'Probably':\n",
+    "            score+=2\n",
+    "        elif txt == 'Definitely':\n",
+    "            score+=4\n",
+    "    altruistic_list.append(score)\n",
+    "    \n",
+    "arousal_list = np.asarray(arousal_list)\n",
+    "altruistic_list = np.asarray(altruistic_list)\n",
+    "r = np.corrcoef(arousal_list, altruistic_list)\n",
+    "print(r[0,1])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
