did most things

--- a/Results_visualizer.ipynb
+++ b/Results_visualizer.ipynb
@@ -36,7 +36,7 @@
         "import matplotlib.pyplot as plt\n",
         "import numpy as np"
       ],
-      "execution_count": null,
+      "execution_count": 49,
       "outputs": []
     },
     {
@@ -54,7 +54,7 @@
         "metadata_dir2 = '/content/neutral.csv'\n",
         "metadata2 = pd.read_csv(metadata_dir2)"
       ],
-      "execution_count": null,
+      "execution_count": 50,
       "outputs": []
     },
     {
@@ -938,15 +938,153 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "aQEf7yTygpmG"
+        "id": "FPTaSap0Ctpj"
       },
       "source": [
-        ""
+        "#MOSR VS MENTAL HEALTH"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "txQgYFWtDiu4"
+      },
+      "source": [
+        "def shivam_function_MOSRvsGHQ(arousal_list,altruistic_list,data_type,column_no1,column_no2):    \n",
+        "    forbidden_i=[34,38,40,42,44]\n",
+        "    score1=0\n",
+        "    for row in data_type.iterrows(): #altruistic\n",
+        "        arousal_list.append(sum(row[1][column_no1])) #moved\n",
+        "        for i in column_no2:\n",
+        "            txt = row[1][i]\n",
+        "            if txt == 'Definitely not' or txt== 'Much less than usual' or txt== 'Much more than usual' or txt== 'Much less useful' or txt== 'Much less than capable':\n",
+        "                score1+=-4\n",
+        "            elif txt == 'Probably not' or txt=='Less than usual' or txt== 'Rather more than usual' or txt== 'Less useful than usual' or txt== 'Less so than usual' or txt== 'Rather more than usual':\n",
+        "                score1+=-2\n",
+        "            elif txt=='Possibly':\n",
+        "                score1+=0\n",
+        "            elif txt == 'Probably' or txt== 'Same as usual' or txt== 'No more than usual' or txt== 'About same as usual':\n",
+        "                score1+=2\n",
+        "            elif txt == 'Definitely' or txt== 'Better than usual' or txt== 'Not at all' or txt== 'More so than usual':\n",
+        "                score1+=4\n",
+        "        altruistic_list.append(score1)\n",
+        "    return arousal_list, altruistic_list"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "aQEf7yTygpmG",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "82e04935-8fbf-4e88-d12b-bd3f162d38ad"
+      },
+      "source": [
+        "arousal_list = []\n",
+        "altruistic_list=[]\n",
+        "i=[14]\n",
+        "arousal_list,altruistic_list = shivam_function_MOSRvsGHQ(arousal_list,altruistic_list,metadata,i,range(49,61))#happy\n",
+        "arousal_list,altruistic_list = shivam_function_MOSRvsGHQ(arousal_list,altruistic_list,metadata1,i,range(49,61)) #sad\n",
+        "arousal_list,altruistic_list = shivam_function_MOSRvsGHQ(arousal_list,altruistic_list,metadata2,i,range(49,61)) #neutral\n",
+        "arousal_list = np.asarray(arousal_list)\n",
+        "altruistic_list = np.asarray(altruistic_list)\n",
+        "r = np.corrcoef(arousal_list, altruistic_list)\n",
+        "print(r[0,1])"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0.24384964461319028\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "agwwlj-Pm0Yg"
+      },
+      "source": [
+        "#Finding mean age and mean mental health shit"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "D4CnrAfOD5cS",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "10ca89a6-9e8b-4df4-debb-ee25e709531c"
+      },
+      "source": [
+        "def mentalhealth(data_type):    \n",
+        "    a=[]\n",
+        "    score1=0\n",
+        "    score2=0\n",
+        "    score3=0\n",
+        "    score4=0\n",
+        "    score5=0\n",
+        "    score6=0\n",
+        "    for row in data_type.iterrows(): #altruistic\n",
+        "        for i in range(49,61):\n",
+        "            txt = row[1][i]\n",
+        "            if txt == 'Definitely not' or txt== 'Much less than usual' or txt== 'Much more than usual' or txt== 'Much less useful' or txt== 'Much less than capable':\n",
+        "                score1+=-4\n",
+        "                score2+=1\n",
+        "            elif txt == 'Probably not' or txt=='Less than usual' or txt== 'Rather more than usual' or txt== 'Less useful than usual' or txt== 'Less so than usual' or txt== 'Rather more than usual':\n",
+        "                score1+=-2\n",
+        "                score3+=1\n",
+        "            elif txt=='Possibly':\n",
+        "                score1+=0\n",
+        "                score4+=1\n",
+        "            elif txt == 'Probably' or txt== 'Same as usual' or txt== 'No more than usual' or txt== 'About same as usual':\n",
+        "                score1+=2\n",
+        "                score5+=1\n",
+        "            elif txt == 'Definitely' or txt== 'Better than usual' or txt== 'Not at all' or txt== 'More so than usual':\n",
+        "                score1+=4\n",
+        "                score6+=1\n",
+        "            a.append(score1)\n",
+        "    return a,score1,score2,score3,score4,score5,score6\n",
+        "a=[]\n",
+        "data=a\n",
+        "score1=0\n",
+        "score2=0\n",
+        "score3=0\n",
+        "score4=0\n",
+        "score5=0\n",
+        "score6=0\n",
+        "a,score1,score2,score3,score4,score5,score6=mentalhealth(metadata)\n",
+        "\n",
+        "\n",
+        "data=a\n",
+        "a=(data - np.min(data)) / (np.max(data) - np.min(data))\n",
+        "\n",
+        "print(score1,score2,score3,score4,score5,score6)\n",
+        "#print(a)\n",
+        "print(np.mean(a))\n",
+        "print(sum(a)/a.size)"
+      ],
+      "execution_count": 87,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "-124 102 205 0 205 71\n",
+            "0.5865858843537415\n",
+            "0.5865858843537414\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
