--- a/Results_visualizer.ipynb
+++ b/Results_visualizer.ipynb
@@ -36,7 +36,7 @@
         "import matplotlib.pyplot as plt\n",
         "import numpy as np"
       ],
-      "execution_count": 49,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -54,7 +54,7 @@
         "metadata_dir2 = '/content/neutral.csv'\n",
         "metadata2 = pd.read_csv(metadata_dir2)"
       ],
-      "execution_count": 50,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -376,6 +376,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "z6oJ1itG9eOG"
+      },
+      "source": [
+        "#shivam function"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "WWZoZ6SeOczm"
@@ -386,7 +395,6 @@
         "    for row in data_type.iterrows(): #altruistic\n",
         "        arousal_list.append(sum(row[1][column_no1])) #moved\n",
         "        score=0\n",
-        "        averaging = len(column_no2)\n",
         "        for i in column_no2:\n",
         "            if i in forbidden_i:\n",
         "              if txt == 'Definitely Not' :\n",
@@ -412,7 +420,7 @@
         "                score+=2\n",
         "            elif txt == 'Definitely':\n",
         "                score+=4\n",
-        "        altruistic_list.append(score/averaging)\n",
+        "        altruistic_list.append(score)\n",
         "    return arousal_list, altruistic_list\n",
         "academic = [19,28,29,30,31,33,38,48]\n",
         "community = [20,23,24,36,37,39,40,42,43,44,45,46]\n",
@@ -421,7 +429,7 @@
         "thought = [19,22,24,26,27,31,35,40,41,43,44,45,46,47,48]\n",
         "action = [18,20,21,23,25,28,29,30,32,33,34,36,37,38,39,42]"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -1073,7 +1081,7 @@
         "print(np.mean(a))\n",
         "print(sum(a)/a.size)"
       ],
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1085,6 +1093,132 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8nfRjLFl77Kl"
+      },
+      "source": [
+        "#SPIRITUALITY VS ALTRUISM\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gHZUv62M9AVI",
+        "outputId": "e7b5eb8b-7fb9-4dde-f4ab-865a6310a2b3"
+      },
+      "source": [
+        "def shivam_function(arousal_list,altruistic_list,data_type,column_no1,column_no2):    \n",
+        "    forbidden_i=[34,38,40,42,44]\n",
+        "    for row in data_type.iterrows(): #altruistic\n",
+        "        score=0\n",
+        "        for i in column_no1:\n",
+        "            if i in forbidden_i:\n",
+        "              if txt == 'Definitely Not' or txt=='Man':\n",
+        "                  score+=4\n",
+        "              elif txt == 'Probably Not':\n",
+        "                  score+=2              \n",
+        "              elif txt == 'Possibly':\n",
+        "                score+=0\n",
+        "              elif txt == 'Probably':\n",
+        "                  score+=-2\n",
+        "              elif txt == 'Definitely' or txt=='Woman':\n",
+        "                  score+=-4\n",
+        "              continue\n",
+        "\n",
+        "            txt = row[1][i]\n",
+        "            if txt == 'Not at all'  or txt=='Woman' :\n",
+        "                score+=-4\n",
+        "            elif txt == 'Slightly':\n",
+        "                score+=-2\n",
+        "            elif txt == 'Somewhat':\n",
+        "                score+=0\n",
+        "            elif txt == 'Very':\n",
+        "                score+=2\n",
+        "            elif txt == 'Extremely' or txt=='Man':\n",
+        "                score+=4\n",
+        "        arousal_list.append(score)\n",
+        "\n",
+        "\n",
+        "        score=0\n",
+        "        for i in column_no2:\n",
+        "            if i in forbidden_i:\n",
+        "              if txt == 'Definitely Not' :\n",
+        "                  score+=4\n",
+        "              elif txt == 'Probably Not':\n",
+        "                  score+=2              \n",
+        "              elif txt == 'Possibly':\n",
+        "                score+=0\n",
+        "              elif txt == 'Probably':\n",
+        "                  score+=-2\n",
+        "              elif txt == 'Definitely':\n",
+        "                  score+=-4\n",
+        "              continue\n",
+        "\n",
+        "            txt = row[1][i]\n",
+        "            if txt == 'Definitely not' or txt== 'Much less than usual' or txt== 'Much more than usual' or txt== 'Much less useful' or txt== 'Much less than capable':\n",
+        "                score+=-4\n",
+        "            elif txt == 'Probably not' or txt=='Less than usual' or txt== 'Rather more than usual' or txt== 'Less useful than usual' or txt== 'Less so than usual' or txt== 'Rather more than usual':\n",
+        "                score+=-2\n",
+        "            elif txt=='Possibly':\n",
+        "                score+=0\n",
+        "            elif txt == 'Probably' or txt== 'Same as usual' or txt== 'No more than usual' or txt== 'About same as usual':\n",
+        "                score+=2\n",
+        "            elif txt == 'Definitely' or txt== 'Better than usual' or txt== 'Not at all' or txt== 'More so than usual':\n",
+        "                score+=4\n",
+        "        altruistic_list.append(score)\n",
+        "    return arousal_list, altruistic_list\n",
+        "academic = [19,28,29,30,31,33,38,48]\n",
+        "community = [20,23,24,36,37,39,40,42,43,44,45,46]\n",
+        "fnf = [18,21,22,27,35]\n",
+        "general = [25,26,32,34,41,47]\n",
+        "thought = [19,22,24,26,27,31,35,40,41,43,44,45,46,47,48]\n",
+        "action = [18,20,21,23,25,28,29,30,32,33,34,36,37,38,39,42]\n",
+        "\n",
+        "arousal_list = []\n",
+        "altruistic_list=[]\n",
+        "i=[2]\n",
+        "arousal_list,altruistic_list = shivam_function(arousal_list,altruistic_list,metadata,i,range(18,48))#happy\n",
+        "arousal_list,altruistic_list = shivam_function(arousal_list,altruistic_list,metadata1,i,range(18,48)) #sad\n",
+        "arousal_list,altruistic_list = shivam_function(arousal_list,altruistic_list,metadata2,i,range(18,48)) #neutral\n",
+        "arousal_list = np.asarray(arousal_list)\n",
+        "altruistic_list = np.asarray(altruistic_list)\n",
+        "print(arousal_list,arousal_list)\n",
+        "r = np.corrcoef(arousal_list, altruistic_list)\n",
+        "print(r[0,1])\n",
+        "\n"
+      ],
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[ 4  4  4  4  4 -4  4  4 -4  4  4  4 -4 -4  4  4 -4  4  4  4  4  4  4  0\n",
+            "  4  4  4 -4  4  4 -4 -4  4  4  4  4  4  4 -4  4  4  4  4  4  4  4  4 -4\n",
+            "  4] [ 4  4  4  4  4 -4  4  4 -4  4  4  4 -4 -4  4  4 -4  4  4  4  4  4  4  0\n",
+            "  4  4  4 -4  4  4 -4 -4  4  4  4  4  4  4 -4  4  4  4  4  4  4  4  4 -4\n",
+            "  4]\n",
+            "-0.08788928123752883\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FiHyheJT_Ord"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
